--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TaskApp</string>
+
+    <!--  TasksFragment  -->
+    <string name="fab_add_button_content_desc">Add task button</string>
 </resources>
